syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.socialmedia.comment";
option java_outer_classname = "CommentProto";

package comment;

service CommentService {
  rpc GetCommentDetails (CommentRequest) returns (CommentResponse);
  rpc AddComment (AddCommentRequest) returns (AddCommentResponse);
}

message CommentRequest {
  string commentId = 1;
}

message CommentResponse {
  string commentId = 1;
  string postId = 2;
  string userId = 3;
  string content = 4;
  string timestamp = 5;
}

message AddCommentRequest {
  string postId = 1;
  string userId = 2;
  string content = 3;
}

message AddCommentResponse {
  string commentId = 1;
}
